<resources>
    <string name="app_name">MyResume</string>
    <string name="my_name">NWAEME OLISEMEKA EPHRAIM</string>
    <string name="my_role">ANDROID DEVELOPER</string>
    <string name="about_me">About Me</string>
    <string name="work_experience">Work Experience</string>
    <string name="education">Education</string>
    <string name="skills">Skills</string>
    <string name="contact_me">Contact Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="linkedin_link"><a href="https://www.linkedin.com/in/olisemeka-nwaeme">https://www.linkedin.com/in/olisemeka-nwaeme</a></string>
    <string name="github_link"><a href="https://www.github.com/nwaeme-olise">https://www.github.com/nwaeme-olise</a></string>
</resources>